--- a/BrailleSystem/BrailleSystem.csproj
+++ b/BrailleSystem/BrailleSystem.csproj
@@ -106,7 +106,7 @@
   <ItemGroup>
     <Content Include="About.aspx" />
     <None Include="Connected Services\BrailleService\BrailleService.disco" />
-    <Content Include="Connected Services\BrailleService\BrailleSystem.BrailleService.GetBrailleDotsForShapeResponse.datasource">
+    <Content Include="Connected Services\BrailleService\BrailleSystem.BrailleService.GetshapevaluesResponse.datasource">
       <DependentUpon>Reference.svcmap</DependentUpon>
     </Content>
     <None Include="Connected Services\BrailleService\configuration91.svcinfo" />
