--- a/BrailleSystem/BrailleSystem.csproj
+++ b/BrailleSystem/BrailleSystem.csproj
@@ -133,6 +133,7 @@
     <Content Include="Default.aspx" />
     <Content Include="favicon.ico" />
     <Content Include="Global.asax" />
+    <Content Include="images\R.png" />
     <Content Include="Interface.aspx" />
     <Content Include="Scripts\bootstrap.bundle.js" />
     <Content Include="Scripts\bootstrap.bundle.min.js" />
