--- a/BrailleSystem/BrailleSystem.csproj
+++ b/BrailleSystem/BrailleSystem.csproj
@@ -106,6 +106,9 @@
   <ItemGroup>
     <Content Include="About.aspx" />
     <None Include="Connected Services\BrailleService\BrailleService.disco" />
+    <Content Include="Connected Services\BrailleService\BrailleSystem.BrailleService.ConvertToBrailleResponse.datasource">
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </Content>
     <None Include="Connected Services\BrailleService\configuration91.svcinfo" />
     <None Include="Connected Services\BrailleService\configuration.svcinfo" />
     <None Include="Connected Services\BrailleService\Reference.svcmap">
