--- a/BrailleSystem/BrailleSystem.csproj
+++ b/BrailleSystem/BrailleSystem.csproj
@@ -109,13 +109,10 @@
     <Content Include="Connected Services\BrailleService\BrailleSystem.BrailleService.ConvertToBrailleResponse.datasource">
       <DependentUpon>Reference.svcmap</DependentUpon>
     </Content>
-    <Content Include="Connected Services\BrailleService\BrailleSystem.BrailleService.AddToBrailleHistoryResponse.datasource">
-      <DependentUpon>Reference.svcmap</DependentUpon>
-    </Content>
     <Content Include="Connected Services\BrailleService\BrailleSystem.BrailleService.ArrayOfString.datasource">
       <DependentUpon>Reference.svcmap</DependentUpon>
     </Content>
-    <Content Include="Connected Services\BrailleService\BrailleSystem.BrailleService.GetBrailleHistoryResponse.datasource">
+    <Content Include="Connected Services\BrailleService\BrailleSystem.BrailleService.GetCalculationsResponse.datasource">
       <DependentUpon>Reference.svcmap</DependentUpon>
     </Content>
     <None Include="Connected Services\BrailleService\configuration91.svcinfo" />
