--- a/BrailleSystem/Web.config
+++ b/BrailleSystem/Web.config
@@ -45,7 +45,7 @@
   <system.serviceModel>
     <bindings>
       <basicHttpBinding>
-        <binding name="BrailleServiceSoap">
+        <binding name="BrailleServiceSoap" allowCookies="true">
           <security mode="Transport" />
         </binding>
         <binding name="BrailleServiceSoap1" />
